# gerador_pdf_imagens_em_lote

./: .env_example  .gitignore  README.md  processar.py  pyproject.toml  pytest.ini  requirements.txt  settings.toml
resize/: README.md
src/: .gitignore  Conversao.py  Diretorio.py  Flags.py  Folha.py  FolhaImagem.py  Imagem.py  Pdf.py  app.py  logging_config.py  main_opcoes.py
tests/: conftest.py
tests/integration/: conftest.py  test_mock_image.py  test_put_image_on_sheet.py  test_resize_image.py  test_resize_put_image_on_sheet.py  test_sheet.py
tests/unit/: test_envio.py  test_sheet.py
